--- a/css/styles.css
+++ b/css/styles.css
@@ -118,13 +118,13 @@ body {
     border-radius: 5px;
     background-color: #633A00; 
     color: white;
-    cursor: pointer;
+    cursor: pointer !important;
     font-size: 16px;
     margin-top: 15px;
 }
 
 .shop-now:hover {
-    background-color: #0056b3;
+    background-color: #0056b3 !important;
 }
 
 /* Card with Image Background */
@@ -153,6 +153,7 @@ body {
     text-align: center;
     border-radius: 10px;
     padding: 20px; /* Ensures space for the content */
+    /* z-index: 2; */
 }
 
 /* Card Text and Button Inside Overlay */
@@ -253,6 +254,7 @@ text-align: center;
     position: absolute;
     top: 20%;/* Adjust as needed */
     height: 100%; 
+    pointer-events: none;
 }
 
 .overlay-card {
@@ -600,3 +602,7 @@ display: flex;
     background-color: #45a049;
   } */
    
+  .footer-section a {
+    text-decoration: none !important;
+    color: inherit !important;
+  }
