--- a/css/styles.css
+++ b/css/styles.css
@@ -462,13 +462,24 @@ top: 226px;
 left: 40px;
 gap: 0px;
 opacity: 0px;
-display: flex;
-    gap: 20px; /* Spacing between cards */
-    justify-content: start; /* Center align the cards */
-    flex-wrap: wrap; /* Allow wrapping for smaller screens */
-    flex-direction:column;
-    align-items: start;
+/* display: flex; */
+    /* gap: 20px;  */
+    /* justify-content: start;  */
+    /* flex-wrap: wrap;  */
+    /* flex-direction:column; */
+    /* align-items: start; */
 
+}
+
+.address-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+}
+
+.contact-items {
+    text-align: left;
+    margin: 8px;
 }
 
 .social-icon {
@@ -636,19 +647,20 @@ display: flex;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
+    background-color: #663e02;
+    padding: 50px 50px 20px 50px;
     border: 2px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     z-index: 1000;
+    color:wheat ;
 }
 .popup button {
     margin-top: 10px;
     padding: 5px 10px;
     border: none;
-    background-color:  #4CAF50;
+    background-color:  #D98943;
     color: white;
     border-radius: 5px;
     cursor: pointer;
