--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,12 @@ text-align: center;
         .msg {
             width: 40% !important;
         }
+        .slider-bg {
+            height: 500px !important;
+        }
+
 }
+
 section {
 
     padding: 20px;
@@ -682,6 +687,10 @@ opacity: 0px;
     height: 328px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     /* margin: 5px; */
+}
+
+.mt-100 {
+    margin-top: 100px;
 }
 
 .swiper-slide img {
