mobile responsive and alignments work have been done

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ section {
     padding: 50px 20px;
     text-align: center;
     /* background-color: #f4f4f4; */
-    margin: 20px 0;
+    /* margin: 20px 0; */
 }
 
 .cart-section {
